Added adaptive and changed html code

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,11 @@
                     <li class="header-section-nav-list__item"><a href="#portfolio" class="header-section-nav-list__link">Портфолио</a></li>
                     <li class="header-section-nav-list__item"><a href="#contacts" class="header-section-nav-list__link">Контакты</a></li>
                 </div>
+                <div class="header-section-nav-menu">
+                    <span class="header-section-nav-menu__line"></span>
+                    <span class="header-section-nav-menu__line"></span>
+                    <span class="header-section-nav-menu__line"></span>
+                </div>
             </nav>
             <div class="header-section-content">
                 <h1 class="header-section-content__name">Александр Самылин</h1>
@@ -42,9 +47,9 @@
         <div class="about-section-content">
             <h2 class="about-section-content__title">Обо мне</h2>
             <div class="about-section-content__line line"></div>
-            <p class="about-section-content__description">Здравствуйте, меня зовут Александр Самылин, мне 21 год. На 4 курсе университета я увлекся версткой сайтов с использованием HTML и CSS. В настоящее время я активно развиваюсь в области веб-разработки, познаю новые технологии и улучшаю уже накопленные знания. В бущуем планирую стать полноценным Front-End разработчиком.</p>
+            <p class="about-section-content__description">Здравствуйте, меня зовут Александр Самылин, мне 21 год. На 4 курсе университета я увлекся версткой сайтов с использованием HTML и CSS. В настоящее время я активно развиваюсь в области веб-разработки, познаю новые технологии и улучшаю уже накопленные знания. В настоящий момент ищу работу верстальщиком, а в будущем планирую стать полноценным Front-End разработчиком.</p>
             <div class="about-section-content-button">
-                <a class="about-section-cotent-button__link" href="#">
+                <a class="about-section-content-button__link" href="#">
                     <svg class="about-section-content-button__icon" version="1.1" id="download" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="475.078px" height="475.077px" viewBox="0 0 475.078 475.077" style="enable-background:new 0 0 475.078 475.077;" xml:space="preserve">
                         <g>
                             <g>
@@ -66,7 +71,7 @@
             <img class="skills-section-img__image" src="img/grid-img.png" alt="Grid">
         </div>
         <div class="skills-section-content">
-            <h2 class="skills-section-content__title">Профессиональные навыки</h2>
+            <h2 class="skills-section-content__title">Навыки</h2>
             <div class="skills-section-content__line line"></div>
             <div class="skills-section-content-block">
                 <div class="skills-section-content-block-skill">
@@ -95,6 +100,18 @@
                 </div>
                 <div class="skills-section-content-block-skill">
                     <h4 class="skills-section-content-block-skill__title">Bootstrap 4 <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <div class="skills-section-content-block-skill-progress-back">
+                        <div class="skills-section-content-block-skill-progress-front"></div>
+                    </div>
+                </div>
+                <div class="skills-section-content-block-skill">
+                    <h4 class="skills-section-content-block-skill__title">Gulp 4 <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <div class="skills-section-content-block-skill-progress-back">
+                        <div class="skills-section-content-block-skill-progress-front"></div>
+                    </div>
+                </div>
+                <div class="skills-section-content-block-skill">
+                    <h4 class="skills-section-content-block-skill__title">Git & Github <span class="skills-section-content-block-skill__percent">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
@@ -141,6 +158,60 @@
                     </div>
                 </div>
             </div>
+            <div class="portfolio-section-modal portfolio-section-modal-creativia">
+                <div class="portfolio-section-modal-btn-close">
+                    <a class="portfolio-section-modal-btn-close__link" href="#">
+                        <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                            <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                        </svg>
+                    </a>
+                </div>
+                <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Creativia</h3>
+                <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
+                <ul class="portfolio-section-modal-list">
+                    <li class="portfolio-section-modal-list__item">HTML5</li>
+                    <li class="portfolio-section-modal-list__item">SCSS (Flexbox)</li>
+                    <li class="portfolio-section-modal-list__item">jQuery</li>
+                    <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
+                </ul>
+                <button class="portfolio-section-modal-btn" type="button">Перейти</button>
+            </div>
+            <div class="portfolio-section-modal portfolio-section-modal-bicycle">
+                <div class="portfolio-section-modal-btn-close">
+                    <a class="portfolio-section-modal-btn-close__link" href="#">
+                        <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                            <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                        </svg>
+                    </a>
+                </div>
+                <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Bicycle</h3>
+                <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
+                <ul class="portfolio-section-modal-list">
+                    <li class="portfolio-section-modal-list__item">HTML5</li>
+                    <li class="portfolio-section-modal-list__item">SCSS (Grid)</li>
+                    <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
+                </ul>
+                <button class="portfolio-section-modal-btn" type="button">Перейти</button>
+            </div>
+            <div class="portfolio-section-modal portfolio-section-modal-waxom">
+                <div class="portfolio-section-modal-btn-close">
+                    <a class="portfolio-section-modal-btn-close__link" href="#">
+                        <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                            <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                        </svg>
+                    </a>
+                </div>
+                <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Waxom</h3>
+                <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
+                <ul class="portfolio-section-modal-list">
+                    <li class="portfolio-section-modal-list__item">HTML5</li>
+                    <li class="portfolio-section-modal-list__item">SCSS</li>
+                    <li class="portfolio-section-modal-list__item">jQuery</li>
+                    <li class="portfolio-section-modal-list__item">Bootstrap 4</li>
+                    <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
+                </ul>
+                <button class="portfolio-section-modal-btn" type="button">Перейти</button>
+            </div>
         </div>
     </section>
     <section class="contacts-section" id="contacts">
@@ -182,9 +253,9 @@
                     </div>
                     <div class="footer-section-content-social-github">
                         <a class="footer-section-content-social-github__link" href="https://github.com" target="_blank">
-                            <svg class="footer-section-content-social-github__icon" version="1.1" id="github-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="430.117px" height="430.116px" viewBox="0 0 430.117 430.116" style="enable-background:new 0 0 430.117 430.116;" xml:space="preserve">
+                            <svg class="footer-section-content-social-github__icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="438.549px" height="438.549px" viewBox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;" xml:space="preserve">
                                 <g>
-                                    <path id="Github" d="M332.146,1.3c-38.456,24.038-78.108,3.762-106.689,0C99.268-15.326,59.152,131.895,151.094,190.921 c-23.671,12.258-22.124,74.668,3.239,83.559c-59.739,6.833-70.816,91.027-38.793,125.349c38.965,41.752,158.828,38.989,193.976,0 c24.539-27.237,27.946-83.372,6.454-109.266c-19.593-23.63-117.904-27.2-116.374-64.284c1.064-25.921,36.613-21.835,58.194-32.143 c40.589-19.408,64.434-77.478,48.491-122.135c9.049-1.701,16.797-4.721,25.864-6.422V1.3z M176.966,136.295 c-47.308-103.065,108.771-95.673,61.428,0C222.862,147.802,192.302,148.946,176.966,136.295z M264.25,338.766 c4.191,46.223-89.396,48.271-100.219,16.087c-9.11-27.116,2.231-34.803,29.09-41.789 C223.543,305.144,261.44,307.851,264.25,338.766z" fill="white"/>
+                                    <path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365 c-39.781,0-76.472,9.804-110.063,29.408c-33.596,19.605-60.192,46.204-79.8,79.8C9.803,148.168,0,184.854,0,224.63 c0,47.78,13.94,90.745,41.827,128.906c27.884,38.164,63.906,64.572,108.063,79.227c5.14,0.954,8.945,0.283,11.419-1.996 c2.475-2.282,3.711-5.14,3.711-8.562c0-0.571-0.049-5.708-0.144-15.417c-0.098-9.709-0.144-18.179-0.144-25.406l-6.567,1.136 c-4.187,0.767-9.469,1.092-15.846,1c-6.374-0.089-12.991-0.757-19.842-1.999c-6.854-1.231-13.229-4.086-19.13-8.559 c-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559 c-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-0.951-2.568-2.098-3.711-3.429c-1.142-1.331-1.997-2.663-2.568-3.997 c-0.572-1.335-0.098-2.43,1.427-3.289c1.525-0.859,4.281-1.276,8.28-1.276l5.708,0.853c3.807,0.763,8.516,3.042,14.133,6.851 c5.614,3.806,10.229,8.754,13.846,14.842c4.38,7.806,9.657,13.754,15.846,17.847c6.184,4.093,12.419,6.136,18.699,6.136 c6.28,0,11.704-0.476,16.274-1.423c4.565-0.952,8.848-2.383,12.847-4.285c1.713-12.758,6.377-22.559,13.988-29.41 c-10.848-1.14-20.601-2.857-29.264-5.14c-8.658-2.286-17.605-5.996-26.835-11.14c-9.235-5.137-16.896-11.516-22.985-19.126 c-6.09-7.614-11.088-17.61-14.987-29.979c-3.901-12.374-5.852-26.648-5.852-42.826c0-23.035,7.52-42.637,22.557-58.817 c-7.044-17.318-6.379-36.732,1.997-58.24c5.52-1.715,13.706-0.428,24.554,3.853c10.85,4.283,18.794,7.952,23.84,10.994 c5.046,3.041,9.089,5.618,12.135,7.708c17.705-4.947,35.976-7.421,54.818-7.421s37.117,2.474,54.823,7.421l10.849-6.849 c7.419-4.57,16.18-8.758,26.262-12.565c10.088-3.805,17.802-4.853,23.134-3.138c8.562,21.509,9.325,40.922,2.279,58.24 c15.036,16.18,22.559,35.787,22.559,58.817c0,16.178-1.958,30.497-5.853,42.966c-3.9,12.471-8.941,22.457-15.125,29.979 c-6.191,7.521-13.901,13.85-23.131,18.986c-9.232,5.14-18.182,8.85-26.84,11.136c-8.662,2.286-18.415,4.004-29.263,5.146 c9.894,8.562,14.842,22.077,14.842,40.539v60.237c0,3.422,1.19,6.279,3.572,8.562c2.379,2.279,6.136,2.95,11.276,1.995 c44.163-14.653,80.185-41.062,108.068-79.226c27.88-38.161,41.825-81.126,41.825-128.906 C438.536,184.851,428.728,148.168,409.132,114.573z" fill="white"/>
                                 </g>
                             </svg>
                         </a>
