--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
             <div class="about-section-content__line line"></div>
             <p class="about-section-content__description">Здравствуйте, меня зовут Александр Самылин, мне 21 год. На 4 курсе университета я увлекся версткой сайтов с использованием HTML и CSS. В настоящее время я активно развиваюсь в области веб-разработки, познаю новые технологии и улучшаю уже накопленные знания. В настоящий момент ищу работу верстальщиком, а в будущем планирую стать полноценным Front-End разработчиком.</p>
             <div class="about-section-content-button">
-                <a class="about-section-content-button__link" href="#">
+                <a class="about-section-content-button__link" href="docs/Resume.pdf" download>
                     <svg class="about-section-content-button__icon" version="1.1" id="download" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="475.078px" height="475.077px" viewBox="0 0 475.078 475.077" style="enable-background:new 0 0 475.078 475.077;" xml:space="preserve">
                         <g>
                             <g>
@@ -75,37 +75,37 @@
             <div class="skills-section-content__line line"></div>
             <div class="skills-section-content-block">
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">HTML5 <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">HTML5 <span class="skills-section-content-block-skill__percent" data-percent="90">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">CSS3 (SCSS) <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">CSS3 (SCSS) <span class="skills-section-content-block-skill__percent" data-percent="87">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">Javascript (ES6) <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">Javascript (ES6) <span class="skills-section-content-block-skill__percent" data-percent="56">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">jQuery <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">jQuery <span class="skills-section-content-block-skill__percent" data-percent="78">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">Bootstrap 4 <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">Bootstrap 4 <span class="skills-section-content-block-skill__percent" data-percent="84">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">Gulp 4 <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">Gulp 4 <span class="skills-section-content-block-skill__percent" data-percent="88">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
@@ -221,7 +221,7 @@
                 <div class="contacts-section-content-info">
                     <h2 class="contacts-section-content-info__title">Обратная связь</h2>
                     <div class="contacts-section-content-info__line line"></div>
-                    <p class="contacts-section-content-info__description">Если у вас есть какие-либо вопросы, то вы можете связаться со мной при помощи реквизитов, указанных внизу, либо отправив свое сообщение, заполнив поля формы. Я отвечу вам в ближайшее время.</p>
+                    <p class="contacts-section-content-info__description">Если у вас есть какие-либо вопросы, то вы можете связаться со мной при помощи реквизитов, указанных ниже. Я отвечу вам в ближайшее время.</p>
                     <div class="contacts-section-content-info-block">
                         <span class="contacts-section-content-info-block-address">Адрес: <a class="contacts-section-content-info-block-address__text" href="#">г. Волгоград, Советский р-н</a></span>
                         <span class="contacts-section-content-info-block-phone">Телефон: <a class="contacts-section-content-info-block-phone__text" href="tel:+79370980594">+7 (937) 098-05-94</a></span>
@@ -243,7 +243,7 @@
             <div class="footer-section-content">
                 <div class="footer-section-content-social">
                     <div class="footer-section-content-social-vk">
-                        <a class="footer-section-content-social-vk__link" href="https://vk.com" target="_blank">
+                        <a class="footer-section-content-social-vk__link" href="https://vk.com/checkingthirdward" target="_blank">
                             <svg class="footer-section-content-social-vk__icon" version="1.1" id="vk-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="548.358px" height="548.358px" viewBox="0 0 548.358 548.358" style="enable-background:new 0 0 548.358 548.358;" xml:space="preserve">
                                 <g>
                                     <path d="M545.451,400.298c-0.664-1.431-1.283-2.618-1.858-3.569c-9.514-17.135-27.695-38.167-54.532-63.102l-0.567-0.571 l-0.284-0.28l-0.287-0.287h-0.288c-12.18-11.611-19.893-19.418-23.123-23.415c-5.91-7.614-7.234-15.321-4.004-23.13 c2.282-5.9,10.854-18.36,25.696-37.397c7.807-10.089,13.99-18.175,18.556-24.267c32.931-43.78,47.208-71.756,42.828-83.939 l-1.701-2.847c-1.143-1.714-4.093-3.282-8.846-4.712c-4.764-1.427-10.853-1.663-18.278-0.712l-82.224,0.568 c-1.332-0.472-3.234-0.428-5.712,0.144c-2.475,0.572-3.713,0.859-3.713,0.859l-1.431,0.715l-1.136,0.859 c-0.952,0.568-1.999,1.567-3.142,2.995c-1.137,1.423-2.088,3.093-2.848,4.996c-8.952,23.031-19.13,44.444-30.553,64.238 c-7.043,11.803-13.511,22.032-19.418,30.693c-5.899,8.658-10.848,15.037-14.842,19.126c-4,4.093-7.61,7.372-10.852,9.849 c-3.237,2.478-5.708,3.525-7.419,3.142c-1.715-0.383-3.33-0.763-4.859-1.143c-2.663-1.714-4.805-4.045-6.42-6.995 c-1.622-2.95-2.714-6.663-3.285-11.136c-0.568-4.476-0.904-8.326-1-11.563c-0.089-3.233-0.048-7.806,0.145-13.706 c0.198-5.903,0.287-9.897,0.287-11.991c0-7.234,0.141-15.085,0.424-23.555c0.288-8.47,0.521-15.181,0.716-20.125 c0.194-4.949,0.284-10.185,0.284-15.705s-0.336-9.849-1-12.991c-0.656-3.138-1.663-6.184-2.99-9.137 c-1.335-2.95-3.289-5.232-5.853-6.852c-2.569-1.618-5.763-2.902-9.564-3.856c-10.089-2.283-22.936-3.518-38.547-3.71 c-35.401-0.38-58.148,1.906-68.236,6.855c-3.997,2.091-7.614,4.948-10.848,8.562c-3.427,4.189-3.905,6.475-1.431,6.851 c11.422,1.711,19.508,5.804,24.267,12.275l1.715,3.429c1.334,2.474,2.666,6.854,3.999,13.134c1.331,6.28,2.19,13.227,2.568,20.837 c0.95,13.897,0.95,25.793,0,35.689c-0.953,9.9-1.853,17.607-2.712,23.127c-0.859,5.52-2.143,9.993-3.855,13.418 c-1.715,3.426-2.856,5.52-3.428,6.28c-0.571,0.76-1.047,1.239-1.425,1.427c-2.474,0.948-5.047,1.431-7.71,1.431 c-2.667,0-5.901-1.334-9.707-4c-3.805-2.666-7.754-6.328-11.847-10.992c-4.093-4.665-8.709-11.184-13.85-19.558 c-5.137-8.374-10.467-18.271-15.987-29.691l-4.567-8.282c-2.855-5.328-6.755-13.086-11.704-23.267 c-4.952-10.185-9.329-20.037-13.134-29.554c-1.521-3.997-3.806-7.04-6.851-9.134l-1.429-0.859c-0.95-0.76-2.475-1.567-4.567-2.427 c-2.095-0.859-4.281-1.475-6.567-1.854l-78.229,0.568c-7.994,0-13.418,1.811-16.274,5.428l-1.143,1.711 C0.288,140.146,0,141.668,0,143.763c0,2.094,0.571,4.664,1.714,7.707c11.42,26.84,23.839,52.725,37.257,77.659 c13.418,24.934,25.078,45.019,34.973,60.237c9.897,15.229,19.985,29.602,30.264,43.112c10.279,13.515,17.083,22.176,20.412,25.981 c3.333,3.812,5.951,6.662,7.854,8.565l7.139,6.851c4.568,4.569,11.276,10.041,20.127,16.416 c8.853,6.379,18.654,12.659,29.408,18.85c10.756,6.181,23.269,11.225,37.546,15.126c14.275,3.905,28.169,5.472,41.684,4.716h32.834 c6.659-0.575,11.704-2.669,15.133-6.283l1.136-1.431c0.764-1.136,1.479-2.901,2.139-5.276c0.668-2.379,1-5,1-7.851 c-0.195-8.183,0.428-15.558,1.852-22.124c1.423-6.564,3.045-11.513,4.859-14.846c1.813-3.33,3.859-6.14,6.136-8.418 c2.282-2.283,3.908-3.666,4.862-4.142c0.948-0.479,1.705-0.804,2.276-0.999c4.568-1.522,9.944-0.048,16.136,4.429 c6.187,4.473,11.99,9.996,17.418,16.56c5.425,6.57,11.943,13.941,19.555,22.124c7.617,8.186,14.277,14.271,19.985,18.274 l5.708,3.426c3.812,2.286,8.761,4.38,14.853,6.283c6.081,1.902,11.409,2.378,15.984,1.427l73.087-1.14 c7.229,0,12.854-1.197,16.844-3.572c3.998-2.379,6.373-5,7.139-7.851c0.764-2.854,0.805-6.092,0.145-9.712 C546.782,404.25,546.115,401.725,545.451,400.298z" fill="white"/>
@@ -252,7 +252,7 @@
                         </a>
                     </div>
                     <div class="footer-section-content-social-github">
-                        <a class="footer-section-content-social-github__link" href="https://github.com" target="_blank">
+                        <a class="footer-section-content-social-github__link" href="https://github.com/promter11" target="_blank">
                             <svg class="footer-section-content-social-github__icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="438.549px" height="438.549px" viewBox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;" xml:space="preserve">
                                 <g>
                                     <path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365 c-39.781,0-76.472,9.804-110.063,29.408c-33.596,19.605-60.192,46.204-79.8,79.8C9.803,148.168,0,184.854,0,224.63 c0,47.78,13.94,90.745,41.827,128.906c27.884,38.164,63.906,64.572,108.063,79.227c5.14,0.954,8.945,0.283,11.419-1.996 c2.475-2.282,3.711-5.14,3.711-8.562c0-0.571-0.049-5.708-0.144-15.417c-0.098-9.709-0.144-18.179-0.144-25.406l-6.567,1.136 c-4.187,0.767-9.469,1.092-15.846,1c-6.374-0.089-12.991-0.757-19.842-1.999c-6.854-1.231-13.229-4.086-19.13-8.559 c-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559 c-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-0.951-2.568-2.098-3.711-3.429c-1.142-1.331-1.997-2.663-2.568-3.997 c-0.572-1.335-0.098-2.43,1.427-3.289c1.525-0.859,4.281-1.276,8.28-1.276l5.708,0.853c3.807,0.763,8.516,3.042,14.133,6.851 c5.614,3.806,10.229,8.754,13.846,14.842c4.38,7.806,9.657,13.754,15.846,17.847c6.184,4.093,12.419,6.136,18.699,6.136 c6.28,0,11.704-0.476,16.274-1.423c4.565-0.952,8.848-2.383,12.847-4.285c1.713-12.758,6.377-22.559,13.988-29.41 c-10.848-1.14-20.601-2.857-29.264-5.14c-8.658-2.286-17.605-5.996-26.835-11.14c-9.235-5.137-16.896-11.516-22.985-19.126 c-6.09-7.614-11.088-17.61-14.987-29.979c-3.901-12.374-5.852-26.648-5.852-42.826c0-23.035,7.52-42.637,22.557-58.817 c-7.044-17.318-6.379-36.732,1.997-58.24c5.52-1.715,13.706-0.428,24.554,3.853c10.85,4.283,18.794,7.952,23.84,10.994 c5.046,3.041,9.089,5.618,12.135,7.708c17.705-4.947,35.976-7.421,54.818-7.421s37.117,2.474,54.823,7.421l10.849-6.849 c7.419-4.57,16.18-8.758,26.262-12.565c10.088-3.805,17.802-4.853,23.134-3.138c8.562,21.509,9.325,40.922,2.279,58.24 c15.036,16.18,22.559,35.787,22.559,58.817c0,16.178-1.958,30.497-5.853,42.966c-3.9,12.471-8.941,22.457-15.125,29.979 c-6.191,7.521-13.901,13.85-23.131,18.986c-9.232,5.14-18.182,8.85-26.84,11.136c-8.662,2.286-18.415,4.004-29.263,5.146 c9.894,8.562,14.842,22.077,14.842,40.539v60.237c0,3.422,1.19,6.279,3.572,8.562c2.379,2.279,6.136,2.95,11.276,1.995 c44.163-14.653,80.185-41.062,108.068-79.226c27.88-38.161,41.825-81.126,41.825-128.906 C438.536,184.851,428.728,148.168,409.132,114.573z" fill="white"/>
