--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,22 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <section class="preloader-section">
+        <div class='sk-circle-bounce'>
+            <div class='sk-child sk-circle-1'></div>
+            <div class='sk-child sk-circle-2'></div>
+            <div class='sk-child sk-circle-3'></div>
+            <div class='sk-child sk-circle-4'></div>
+            <div class='sk-child sk-circle-5'></div>
+            <div class='sk-child sk-circle-6'></div>
+            <div class='sk-child sk-circle-7'></div>
+            <div class='sk-child sk-circle-8'></div>
+            <div class='sk-child sk-circle-9'></div>
+            <div class='sk-child sk-circle-10'></div>
+            <div class='sk-child sk-circle-11'></div>
+            <div class='sk-child sk-circle-12'></div>
+        </div>
+    </section>
     <header class="header-section" id="home">
         <div class="container">
             <nav class="header-section-nav">
@@ -21,6 +37,15 @@
                     <li class="header-section-nav-list__item"><a href="#skills" class="header-section-nav-list__link">Навыки</a></li>
                     <li class="header-section-nav-list__item"><a href="#portfolio" class="header-section-nav-list__link">Портфолио</a></li>
                     <li class="header-section-nav-list__item"><a href="#contacts" class="header-section-nav-list__link">Контакты</a></li>
+                    <div class="header-section-nav-btn">
+                        <svg class="header-section-nav-btn__icon" version="1.1" id="close-btn" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="357px" height="357px" viewBox="0 0 357 357" style="enable-background:new 0 0 357 357;" xml:space="preserve">
+                            <g>
+                                <g id="close">
+                                    <polygon points="357,35.7 321.3,0 178.5,142.8 35.7,0 0,35.7 142.8,178.5 0,321.3 35.7,357 178.5,214.2 321.3,357 357,321.3 214.2,178.5" fill="white"/>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
                 </div>
                 <div class="header-section-nav-menu">
                     <span class="header-section-nav-menu__line"></span>
@@ -41,6 +66,15 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="btn-scroll-up">
+            <a class="btn-scroll-up__link" href="#">
+                <svg class="btn-scroll-up__icon" version="1.1" id="btn-up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.835 240.835" style="enable-background:new 0 0 240.835 240.835;" xml:space="preserve">
+                    <g>
+                        <path id="Expand_Less" d="M129.007,57.819c-4.68-4.68-12.499-4.68-17.191,0L3.555,165.803c-4.74,4.74-4.74,12.427,0,17.155 c4.74,4.74,12.439,4.74,17.179,0l99.683-99.406l99.671,99.418c4.752,4.74,12.439,4.74,17.191,0c4.74-4.74,4.74-12.427,0-17.155 L129.007,57.819z"/>
+                    </g>
+                </svg>
+            </a>
         </div>
     </header>
     <section class="about-section" id="about">
@@ -75,13 +109,13 @@
             <div class="skills-section-content__line line"></div>
             <div class="skills-section-content-block">
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">HTML5 <span class="skills-section-content-block-skill__percent" data-percent="90">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">HTML5 <span class="skills-section-content-block-skill__percent" data-percent="92">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">CSS3 (SCSS) <span class="skills-section-content-block-skill__percent" data-percent="87">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">CSS3 (SCSS) <span class="skills-section-content-block-skill__percent" data-percent="88">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
@@ -93,25 +127,25 @@
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">jQuery <span class="skills-section-content-block-skill__percent" data-percent="78">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">jQuery <span class="skills-section-content-block-skill__percent" data-percent="74">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">Bootstrap 4 <span class="skills-section-content-block-skill__percent" data-percent="84">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">Bootstrap 4 <span class="skills-section-content-block-skill__percent" data-percent="80">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">Gulp 4 <span class="skills-section-content-block-skill__percent" data-percent="88">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">Gulp 4 <span class="skills-section-content-block-skill__percent" data-percent="68">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
                 </div>
                 <div class="skills-section-content-block-skill">
-                    <h4 class="skills-section-content-block-skill__title">Git & Github <span class="skills-section-content-block-skill__percent">0%</span></h4>
+                    <h4 class="skills-section-content-block-skill__title">Git & Github <span class="skills-section-content-block-skill__percent" data-percent="84">0%</span></h4>
                     <div class="skills-section-content-block-skill-progress-back">
                         <div class="skills-section-content-block-skill-progress-front"></div>
                     </div>
@@ -130,7 +164,7 @@
                 <div class="portfolio-section-content-block">
                     <img class="portfolio-section-content-block__image" src="img/creativia-preview.png" alt="Creativia">
                     <div class="portfolio-section-content-block-icon">
-                        <a class="portfolio-section-content-block-icon__link" href="#">
+                        <a class="portfolio-section-content-block-icon__link" href="#creativia">
                             <svg class="portfolio-section-content-block-icon__icon" version="1.1" id="magnifier" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve">
                                 <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z" fill="white"/>
                             </svg>
@@ -140,7 +174,7 @@
                 <div class="portfolio-section-content-block">
                     <img class="portfolio-section-content-block__image" src="img/bicycle-preview.png" alt="Bicycle">
                     <div class="portfolio-section-content-block-icon">
-                        <a class="portfolio-section-content-block-icon__link" href="#">
+                        <a class="portfolio-section-content-block-icon__link" href="#bicycle">
                             <svg class="portfolio-section-content-block-icon__icon" version="1.1" id="magnifier" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve">
                                 <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z" fill="white"/>
                             </svg>
@@ -150,7 +184,7 @@
                 <div class="portfolio-section-content-block">
                     <img class="portfolio-section-content-block__image" src="img/waxom-preview.png" alt="Waxom">
                     <div class="portfolio-section-content-block-icon">
-                        <a class="portfolio-section-content-block-icon__link" href="#">
+                        <a class="portfolio-section-content-block-icon__link" href="#waxom">
                             <svg class="portfolio-section-content-block-icon__icon" version="1.1" id="magnifier" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve">
                                 <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z" fill="white"/>
                             </svg>
@@ -158,13 +192,11 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolio-section-modal portfolio-section-modal-creativia">
+            <div class="portfolio-section-modal" id="creativia">
                 <div class="portfolio-section-modal-btn-close">
-                    <a class="portfolio-section-modal-btn-close__link" href="#">
-                        <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
-                            <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
-                        </svg>
-                    </a>
+                    <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                        <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                    </svg>
                 </div>
                 <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Creativia</h3>
                 <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
@@ -174,15 +206,13 @@
                     <li class="portfolio-section-modal-list__item">jQuery</li>
                     <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
                 </ul>
-                <button class="portfolio-section-modal-btn" type="button">Перейти</button>
+                <button class="portfolio-section-modal-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
             </div>
-            <div class="portfolio-section-modal portfolio-section-modal-bicycle">
+            <div class="portfolio-section-modal" id="bicycle">
                 <div class="portfolio-section-modal-btn-close">
-                    <a class="portfolio-section-modal-btn-close__link" href="#">
-                        <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
-                            <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
-                        </svg>
-                    </a>
+                    <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                        <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                    </svg>
                 </div>
                 <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Bicycle</h3>
                 <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
@@ -191,15 +221,13 @@
                     <li class="portfolio-section-modal-list__item">SCSS (Grid)</li>
                     <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
                 </ul>
-                <button class="portfolio-section-modal-btn" type="button">Перейти</button>
+                <button class="portfolio-section-modal-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
             </div>
-            <div class="portfolio-section-modal portfolio-section-modal-waxom">
+            <div class="portfolio-section-modal" id="waxom">
                 <div class="portfolio-section-modal-btn-close">
-                    <a class="portfolio-section-modal-btn-close__link" href="#">
-                        <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
-                            <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
-                        </svg>
-                    </a>
+                    <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                        <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                    </svg>
                 </div>
                 <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Waxom</h3>
                 <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
@@ -210,7 +238,7 @@
                     <li class="portfolio-section-modal-list__item">Bootstrap 4</li>
                     <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
                 </ul>
-                <button class="portfolio-section-modal-btn" type="button">Перейти</button>
+                <button class="portfolio-section-modal-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
             </div>
         </div>
     </section>
