Added scroll progress bar's script

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,9 @@
             <div class='sk-child sk-circle-12'></div>
         </div>
     </section>
+    <section class="scroll-section">
+        <div class="scroll-section-bar"></div>
+    </section>
     <header class="header-section" id="home">
         <div class="container">
             <nav class="header-section-nav">
