--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="btn-scroll-up">
-            <a class="btn-scroll-up__link" href="#">
+            <a class="btn-scroll-up__link" href="#home">
                 <svg class="btn-scroll-up__icon" version="1.1" id="btn-up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.835 240.835" style="enable-background:new 0 0 240.835 240.835;" xml:space="preserve">
                     <g>
                         <path id="Expand_Less" d="M129.007,57.819c-4.68-4.68-12.499-4.68-17.191,0L3.555,165.803c-4.74,4.74-4.74,12.427,0,17.155 c4.74,4.74,12.439,4.74,17.179,0l99.683-99.406l99.671,99.418c4.752,4.74,12.439,4.74,17.191,0c4.74-4.74,4.74-12.427,0-17.155 L129.007,57.819z"/>
@@ -196,52 +196,77 @@
                 </div>
             </div>
             <div class="portfolio-section-modal" id="creativia">
-                <div class="portfolio-section-modal-btn-close">
-                    <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
-                        <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
-                    </svg>
+                <div class="portfolio-section-modal-wrapper">
+                    <div class="portfolio-section-modal-header">
+                        <h3 class="portfolio-section-modal-header__title">[Сайт-портфолио] Creativia</h3>
+                        <div class="portfolio-section-modal-header-btn-close">
+                            <svg class="portfolio-section-modal-header-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                                <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="portfolio-section-modal-content">
+                        <p class="portfolio-section-modal-content__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
+                        <ul class="portfolio-section-modal-content-list">
+                            <li class="portfolio-section-modal-content-list__item">HTML5</li>
+                            <li class="portfolio-section-modal-content-list__item">SCSS (Flexbox)</li>
+                            <li class="portfolio-section-modal-content-list__item">jQuery</li>
+                            <li class="portfolio-section-modal-content-list__item">Сборщик Gulp</li>
+                            <li class="portfolio-section-modal-content-list__item">Иконки FontAwesome</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-section-modal-footer">
+                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
+                    </div>
                 </div>
-                <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Creativia</h3>
-                <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
-                <ul class="portfolio-section-modal-list">
-                    <li class="portfolio-section-modal-list__item">HTML5</li>
-                    <li class="portfolio-section-modal-list__item">SCSS (Flexbox)</li>
-                    <li class="portfolio-section-modal-list__item">jQuery</li>
-                    <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
-                </ul>
-                <button class="portfolio-section-modal-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
             </div>
             <div class="portfolio-section-modal" id="bicycle">
-                <div class="portfolio-section-modal-btn-close">
-                    <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
-                        <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
-                    </svg>
+                <div class="portfolio-section-modal-wrapper">
+                    <div class="portfolio-section-modal-header">
+                        <h3 class="portfolio-section-modal-header__title">[Сайт-портфолио] Bicycle</h3>
+                        <div class="portfolio-section-modal-header-btn-close">
+                            <svg class="portfolio-section-modal-header-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                                <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="portfolio-section-modal-content">
+                        <p class="portfolio-section-modal-content__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
+                        <ul class="portfolio-section-modal-content-list">
+                            <li class="portfolio-section-modal-content-list__item">HTML5</li>
+                            <li class="portfolio-section-modal-content-list__item">SCSS (Grid)</li>
+                            <li class="portfolio-section-modal-content-list__item">Сборщик Gulp</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-section-modal-footer">
+                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
+                    </div>
                 </div>
-                <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Bicycle</h3>
-                <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
-                <ul class="portfolio-section-modal-list">
-                    <li class="portfolio-section-modal-list__item">HTML5</li>
-                    <li class="portfolio-section-modal-list__item">SCSS (Grid)</li>
-                    <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
-                </ul>
-                <button class="portfolio-section-modal-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
             </div>
             <div class="portfolio-section-modal" id="waxom">
-                <div class="portfolio-section-modal-btn-close">
-                    <svg class="portfolio-section-modal-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
-                        <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
-                    </svg>
+                <div class="portfolio-section-modal-wrapper">
+                    <div class="portfolio-section-modal-header">
+                        <h3 class="portfolio-section-modal-header__title">[Сайт-портфолио] Waxom</h3>
+                        <div class="portfolio-section-modal-header-btn-close">
+                            <svg class="portfolio-section-modal-header-btn-close__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.9 21.9" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 21.9 21.9">
+                                <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="portfolio-section-modal-content">
+                        <p class="portfolio-section-modal-content__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
+                        <ul class="portfolio-section-modal-content-list">
+                            <li class="portfolio-section-modal-content-list__item">HTML5</li>
+                            <li class="portfolio-section-modal-content-list__item">SCSS</li>
+                            <li class="portfolio-section-modal-content-list__item">jQuery</li>
+                            <li class="portfolio-section-modal-content-list__item">Bootstrap 4</li>
+                            <li class="portfolio-section-modal-content-list__item">Сборщик Gulp</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-section-modal-footer">
+                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
+                    </div>
                 </div>
-                <h3 class="portfolio-section-modal__title">[Сайт-портфолио] Waxom</h3>
-                <p class="portfolio-section-modal__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
-                <ul class="portfolio-section-modal-list">
-                    <li class="portfolio-section-modal-list__item">HTML5</li>
-                    <li class="portfolio-section-modal-list__item">SCSS</li>
-                    <li class="portfolio-section-modal-list__item">jQuery</li>
-                    <li class="portfolio-section-modal-list__item">Bootstrap 4</li>
-                    <li class="portfolio-section-modal-list__item">Сборщик Gulp</li>
-                </ul>
-                <button class="portfolio-section-modal-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
             </div>
         </div>
     </section>
