Fixed text and links in modal windows

--- a/app/index.html
+++ b/app/index.html
@@ -208,7 +208,7 @@
                     <div class="portfolio-section-modal-content">
                         <p class="portfolio-section-modal-content__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
                         <ul class="portfolio-section-modal-content-list">
-                            <li class="portfolio-section-modal-content-list__item">HTML5</li>
+                            <li class="portfolio-section-modal-content-list__item">HTML5 + БЭМ</li>
                             <li class="portfolio-section-modal-content-list__item">SCSS (Flexbox)</li>
                             <li class="portfolio-section-modal-content-list__item">jQuery</li>
                             <li class="portfolio-section-modal-content-list__item">Сборщик Gulp</li>
@@ -216,7 +216,7 @@
                         </ul>
                     </div>
                     <div class="portfolio-section-modal-footer">
-                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
+                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='https://promter11.github.io/creativia'">Перейти</button>
                     </div>
                 </div>
             </div>
@@ -233,13 +233,14 @@
                     <div class="portfolio-section-modal-content">
                         <p class="portfolio-section-modal-content__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
                         <ul class="portfolio-section-modal-content-list">
-                            <li class="portfolio-section-modal-content-list__item">HTML5</li>
+                            <li class="portfolio-section-modal-content-list__item">HTML5 + БЭМ</li>
                             <li class="portfolio-section-modal-content-list__item">SCSS (Grid)</li>
+                            <li class="portfolio-section-modal-content-list__item">jQuery</li>
                             <li class="portfolio-section-modal-content-list__item">Сборщик Gulp</li>
                         </ul>
                     </div>
                     <div class="portfolio-section-modal-footer">
-                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
+                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='https://promter11.github.io/bicycle'">Перейти</button>
                     </div>
                 </div>
             </div>
@@ -256,7 +257,7 @@
                     <div class="portfolio-section-modal-content">
                         <p class="portfolio-section-modal-content__description">Данный сайт был сверстан при помощи следующих средств разработки:</p>
                         <ul class="portfolio-section-modal-content-list">
-                            <li class="portfolio-section-modal-content-list__item">HTML5</li>
+                            <li class="portfolio-section-modal-content-list__item">HTML5 + БЭМ</li>
                             <li class="portfolio-section-modal-content-list__item">SCSS</li>
                             <li class="portfolio-section-modal-content-list__item">jQuery</li>
                             <li class="portfolio-section-modal-content-list__item">Bootstrap 4</li>
@@ -264,7 +265,7 @@
                         </ul>
                     </div>
                     <div class="portfolio-section-modal-footer">
-                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='http://google.com/'">Перейти</button>
+                        <button class="portfolio-section-modal-footer-btn" type="button" onclick="location.href='https://promter11.github.io/waxom'">Перейти</button>
                     </div>
                 </div>
             </div>
